templates/istio/istio-routing.yaml
# istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
  namespace: istio-test
spec:
  hosts:
    - "*"
  gateways:
    - myapp-gateway
  http:
    - match:
        - headers:
            x-version:
              exact: v1
      route:
        - destination:
            host: myapp
            subset: v1
    - match:
        - headers:
            x-version:
              exact: v2
      route:
        - destination:
            host: myapp
            subset: v2
    - route: # default
        - destination:
            host: myapp
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp
  namespace: istio-test
spec:
  host: myapp
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
