templates/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
  namespace: istio-test
spec:
  hosts:
    - "*"
  gateways:
    - myapp-gateway
  http:
    - match:
        - headers:
            x-version:
              exact: v1
      route:
        - destination:
            host: myapp
            subset: v1
    - match:
        - headers:
            x-version:
              exact: v2
      route:
        - destination:
            host: myapp
            subset: v2
    - route: # default
        - destination:
            host: myapp
            subset: v1
